# pydantic-basedtyping

./: README.md  pyproject.toml
.github/workflows/: check.yaml  publish.yaml
src/pydantic_basedtyping/: __init__.py  __main__.py
tests/: test_install.py  test_type_eval.py
